# halfedge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_zh.md  SECURITY.md  halfedge_comparison.md  reasonix.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: geometry_algs.rs  subdiv.rs  topology_ops.rs  traversal.rs
book/: book.toml
book/src/: README.md  SUMMARY.md  getting-started.md
book/src/core/: ids.md  query.md  storage.md  topology_ops.md  traversal.md  validate.md
book/src/examples/: examples.md
book/src/geometry/: conformal.md  deformation.md  direction_field.md  geodesics.md  geometry.md  intrinsic.md  parameterization.md
book/src/infra/: builtin_attrs.md  bvh.md  connectivity.md  export.md  io.md  linalg.md  orientation.md  predicates.md  primitives.md  property.md  test_util.md
book/src/mesh/: boolean.md  decimate.md  remesh.md  repair.md  sdf.md  subdiv.md  triangulation.md  weld.md
docs/: boolean.tex  builtin_attrs.tex  bvh.tex  catmull_clark.tex  conformal.tex  connectivity.tex  decimate.tex  deformation.tex  direction_field.tex  examples.tex  export.tex  geodesics.tex  geometry.tex  ids.tex  intrinsic.tex  io.tex  linalg.tex  nonmanifold_design.md  orientation.tex  parameterization.tex  predicates.tex  primitives.tex  property.tex  query.tex  remesh.tex  repair.tex  sdf.tex  sqrt3.tex  storage.tex  subdiv.tex  test_util.tex  topology_ops.tex  traversal.tex  triangulation.tex  validate.tex  weld.tex
examples/: build_mesh.rs  engvis_viewer.rs  export_wgpu.rs  extrude_face.rs  geometry_query.rs  icosphere.rs  laplacian_smooth.rs  loop_subdivision.rs  obj_io.rs  point_triangle_distance.rs  property.rs  storage_basic.rs  topology_ops.rs  traversal.rs  validate.rs
src/: boolean.rs  builtin_attrs.rs  bvh.rs  cache.rs  conformal.rs  connectivity.rs  decimate.rs  deformation.rs  direction_field.rs  export.rs  geodesics.rs  geometry.rs  ids.rs  intrinsic.rs  io.rs  lib.rs  linalg.rs  marching_table.in  orientation.rs  parameterization.rs  predicates.rs  primitives.rs  property.rs  query.rs  remesh.rs  repair.rs  sdf.rs  storage.rs  subdiv.rs  test_util.rs  topology_ops.rs  traversal.rs  triangulation.rs  validate.rs  weld.rs
src/geometry/: aabb.rs  curvature.rs  distance.rs  mod.rs  quality.rs  query.rs  smooth.rs
src/io/: builder.rs  gltf.rs  mod.rs  obj.rs  off.rs  ply.rs  stl.rs
src/subdiv/: catmull_clark.rs  sqrt3.rs
src/topology_ops/: builders.rs  edit.rs  extrude.rs  helpers.rs  mod.rs  tests.rs  validate.rs
tests/: mesh_workflow.rs  panic_safety.rs
